fix: make hover not stick on mobile

--- a/packages/ui-webc/src/components/bottom-bar-item/bottom-bar-item.css
+++ b/packages/ui-webc/src/components/bottom-bar-item/bottom-bar-item.css
@@ -15,8 +15,10 @@
   cursor: pointer;
 }
 
-.button:hover {
-  background-color: var(--color-neutral-50);
+@media (hover: hover) {
+  .button:hover {
+    background-color: var(--color-neutral-50);
+  }
 }
 
 .button.active {
